--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "vite --config vite/config.dev.mjs",
     "build": "vite build --config vite/config.prod.mjs",
-    "format": "prettier src/**/*.ts* vite/*.mjs ./*.json -w"
+    "preview": "vite preview",
+    "format": "prettier src/**/*.ts* vite/*.mjs ./*.json index.html -w",
+    "clean": "rimraf node_modules dist"
   },
   "dependencies": {
     "phaser": "^3.90.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -25,6 +27,7 @@
     "typescript-eslint": "^8.26.1",
     "vite": "^7.0.2",
     "terser": "^5.28.1",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "rimraf": "^6.0.1"
   }
 }
